k8s/base/calendars-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendars-redis
  labels:
    app: calendars-redis
spec:
  selector:
    matchLabels:
      app: calendars-redis
  template:
    metadata:
      labels:
        app: calendars-redis
    spec:
      containers:
        - name: calendars-redis
          image: pubsub
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
