k8s/base/measures-insert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measures-insert
  labels:
    app: measures-insert
spec:
  selector:
    matchLabels:
      app: measures-insert
  template:
    metadata:
      labels:
        app: measures-insert
    spec:
      containers:
        - name: measures-insert
          image: pubsub
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
