k8s/base/measures-parse-files.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measures-parse-files
  labels:
    app: measures-parse-files
spec:
  selector:
    matchLabels:
      app: measures-parse-files
  template:
    metadata:
      labels:
        app: measures-parse-files
    spec:
      containers:
        - name: measures-parse-files
          image: pubsub
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
