k8s/base/measures-smarkia.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: measures-smarkia
  labels:
    app: measures-smarkia
spec:
  selector:
    matchLabels:
      app: measures-smarkia
  template:
    metadata:
      labels:
        app: measures-smarkia
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      containers:
        - name: measures-smarkia
          image: pubsub
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "150m"
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
