k8s/base/mongo-debug.yaml
###########################################
# Pod para debuggear la conexion a mongo: #
###########################################

# 1. desplegamos el pod
# kubectl apply -f ./k8s/base/mongo-debug.yaml -n measures
# 2. nos conectamos a el
# kubectl exec -ti -n measures mongo-debug  -- bash
# 3. ejecutamos la conexion
# mongosh mongodb+srv://<user>:<pass>@cluster-medidas-desa-pri.6og8n.mongodb.net/test cluster-medidas-desa.6og8n.mongodb.net/test
# 4. salir
# exit
# 5 borrar el pod
# kubectl delete -f ./k8s/base/mongo-debug.yaml -n measures

apiVersion: v1
kind: Pod
metadata:
  name: mongo-debug
  labels:
    app: mongo-debug
spec:
  containers:
    - name: mongo-debug
      image: mongo:latest
      volumeMounts:
        - name: credentials
          mountPath: /usr/src/credentials
          readOnly: true
        - name: firebase
          mountPath: usr/src/firebase
          readOnly: true
  volumes:
    - name: credentials
      secret:
        secretName: credentials
        items:
          - key: credentials_key
            path: sa.json
    - name: firebase
      secret:
        secretName: firebase
        items:
          - key: firebase_key
            path: firebase.json
