k8s/base/process-measures.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: process-measures
  labels:
    app: process-measures
spec:
  selector:
    matchLabels:
      app: process-measures
  template:
    metadata:
      labels:
        app: process-measures
    spec:
      containers:
        - name: process-measures
          image: pubsub
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
