k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api
          volumeMounts:
            - name: credentials
              mountPath: /usr/src/credentials
              readOnly: true
            - name: firebase
              mountPath: usr/src/firebase
              readOnly: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            initialDelaySeconds: 3
            httpGet:
              path: /api/health
              scheme: HTTP
              port: 8080
          livenessProbe:
            initialDelaySeconds: 3
            httpGet:
              path: /api/health
              scheme: HTTP
              port: 8080
      volumes:
        - name: credentials
          secret:
            secretName: credentials
            items:
              - key: credentials_key
                path: sa.json
        - name: firebase
          secret:
            secretName: firebase
            items:
              - key: firebase_key
                path: firebase.json
---

apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
      name: http

---
